--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6205,6 +6205,12 @@ table {
   z-index: auto;
 }
 
+table,
+th,
+td {
+  border: 1px solid black;
+}
+
 @media (min-width: 576px) {
   .sm\:list-reset {
     list-style: none;
